# NuXSSplMkr

./: .gitignore  CMakeLists.txt  Makefile  README.md
configs/: CKMT_Test.json  CSMS.json  CT18ANLO_nf6_sx.json  CT18ANNLO.json  CT18ANNLO_nf6_sx.json  CT18ANNLO_nf6_sx_v2.json  CT18A_NLO.json  CT18A_NNLO.json  CT18A_NNLO_parton.json  CT18NNLO.json  CT18_LO.json  CT18_NLO.json  CT18_NLO_ZMVFN.json  CT18_NLO_parton.json  CT18_NNLO.json  CT18_NNLO_ZMVFN.json  CT18_NNLO_nocharm.json  CT18_parton.json  EPPS21nlo_CT18Anlo_Al27_nf6_sx.json  EPPS21nlo_CT18Anlo_C12_nf6_sx.json  EPPS21nlo_CT18Anlo_Ca40_nf6_sx.json  EPPS21nlo_CT18Anlo_Fe56_nf6_sx.json  EPPS21nlo_CT18Anlo_O16_nf6_sx.json  EPPS21nlo_CT18Anlo_Pb208_nf6_sx.json  EPPS21nlo_CT18Anlo_W184_nf6_sx.json  HERAPDF_LO.json  HERAPDF_NLO.json  HERAPDF_NNLO.json  HERAPDF_parton.json  MSHT20nnlo_as118_nf6_sx.json  NNPDF31sx_NLO.json  NNPDF40MC_nnlo_as_01180_nf6_sx.json  NNPDF40_nnlo_as_01180_hessian_nf6_sx.json  NNPDF40_nnlo_as_01180_mhou_nf6_sx.json  NNPDF40_nnlo_as_01180_qcd_nf6_sx.json  NNPDF4_LO.json  NNPDF4_NLO.json  NNPDF4_NLO_ZMVFN.json  NNPDF4_NNLO.json  NNPDF4_NNLO_ZMVFN.json  (+15 more)
configs/BGR/: BGR.json
configs/CT18ANLO/: CT18A_NLO.json  CT18A_NLO_ZMVFNS.json  CT18A_NLO_nocharm.json
configs/CT18ANNLO/: CT18A_NNLO.json  CT18A_NNLO_ZMVFNS.json  CT18A_NNLO_complete.json  CT18A_NNLO_evolve.json  CT18A_NNLO_evolved.json  CT18A_NNLO_evolved_nocharm.json  CT18A_NNLO_evolved_nocharm_sx.json  CT18A_NNLO_evolved_sx.json  CT18A_NNLO_nocharm.json  CT18A_NNLO_nocharm_sx.json  CT18A_NNLO_nomass.json  CT18A_NNLO_sx.json
configs/CT18ANNLO_nf6_sx/: CT18A_NNLO_nf6_sx.json  CT18A_NNLO_nf6_sx_ZM.json  CT18A_NNLO_nf6_sx_ZM_complete.json  CT18A_NNLO_nf6_sx_complete.json
configs/CT18NLO/: CT18_NLO.json  CT18_NLO_ZMVFNS.json  CT18_NLO_nocharm.json  CT18_parton.json
configs/CT18NNLO/: CT18_NNLO.json  CT18_NNLO_CKMT.json  CT18_NNLO_ZMFNS.json  CT18_NNLO_complete.json  CT18_NNLO_nocharm.json
configs/CT18NNLO_NF6/: CT18_NNLO_NF6.json  CT18_NNLO_NF6_ZMVFNS.json
configs/CT18NNLO_nf6_sx/: CT18_NNLO_nf6_sx.json  CT18_NNLO_nf6_sx_complete.json
configs/EPPS21/: EPPS21_NLO_C12.json  EPPS21_NLO_Ca40.json  EPPS21_NLO_Fe56.json  EPPS21_NLO_O16.json  EPPS21_NLO_O16_complete.json  EPPS21_NLO_O16_nocharm.json  EPPS21_NLO_Pb208.json  EPPS21_NLO_Pb208_nocharm.json
configs/HERAPDF15NLO_EIG/: HERAPDF15_NLO.json
configs/nCTEQ15/: nCTEQ15.json  nCTEQ15_CKMT.json  nCTEQ15_LO.json  nCTEQ15_PCAC.json  nCTEQ15_TMC.json  nCTEQ15_complete.json  nCTEQ15_iso.json  nCTEQ15_iso_CKMT.json
data/CSMS/cross_sections/: dsdxdy_nu_CC_iso_corrected_logspaced.fits
include/NuXSSplMkr/: configuration.h  cross_section.h  interpolator.h  lhapdf_maker.h  phase_space.h  physconst.h  spline_maker.h  structure_function.h
mains/: CKMT_test.cpp  CMakeLists.txt  calculate_LO_xs.cpp  calculate_all_dsdy.cpp  calculate_all_dsdy_replicas.cpp  calculate_all_xs.cpp  calculate_all_xs_replicas.cpp  calculate_dsdxdQ2.cpp  calculate_dsdxdy.cpp  calculate_dsdxdy_small.cpp  calculate_dsdy.cpp  calculate_nusquids_dsdy.cpp  calculate_nusquids_sigma.cpp  calculate_total_xs.cpp  calculate_xs.cpp  construct_fonll.cpp  create_lhapdf_structure_functions.cpp  cross_sections.cpp  evolve_pdf.cpp  evolve_pdfs.cpp  grid2spline.cpp  make_all_sf_splines.cpp  make_all_sf_splines_replicas.cpp  make_sf_grid.cpp  make_sf_grids.cpp  make_sf_splines.cpp  make_structure_functions.cpp  new_test.cpp  nu_cross.cpp
mains/old/: nu_cross_full.cpp
scripts/: 10_sf_checks.py  1_check_splines.py  2_plot_cross_sections.py  3_phase_space.py  4_dsdy.py  5_1d_spline.py  5_2d_spline.py  5_3d_spline.py  6_plot_qed_corrections.py  7_integrate_corrections.py  8_more_corrections.py  9_CKMT.py  charm_pdf_remover.py  combine_nusquids_data.py  make_grids.py  make_plots.py  spline_integrator.py  spline_maker.py  standard_plots.py
scripts/paper_plots/: 1_cross_sections.py  3_mean_inelasticity.py  xsecs.py
scripts/paper_plots/data/: csms_total_xs_nu.txt  csms_total_xs_nubar.txt  cteq_total_xs_nu.txt  cteq_total_xs_nubar.txt  icecube_inelasticity.txt
src/: CMakeLists.txt  configuration.cpp  configuration.h  cross_section.cpp  cross_section.h  lhapdf_cross_section.cpp  lhapdf_cross_section.h  lhapdf_maker.cpp  phase_space.cpp  phase_space.h  physconst.cpp  physconst.h  spline_maker.cpp  structure_function.cpp  structure_function.h  tools.cpp  tools.h
tests/: CMakeLists.txt  test_CKMT.cpp  test_TMC.cpp  test_cross_section.cpp  test_evolution.cpp  test_lhapdf_sf.cpp  test_new_phase_space.cpp  test_qed_corrections.cpp  test_structure_functions.cpp
